# Mira

./: .gitignore  1.txt  2.txt  3.txt  CONSOLE_CONFIGURATION.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  DRAG_FIX_SUMMARY.md  Dockerfile.unix  Dockerfile.windows  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  SETUP_GUIDE.md  TRAY_ICON_GUIDE.md  TRAY_ICON_IMPLEMENTATION.md  VALIDATION_REPORT.md  WORKFLOW_DIAGRAM.md  build.rs  docker-compose.yml
.github/workflows/: README.md  TROUBLESHOOTING.md  auto-tag.yml  build.yml
.kiro/specs/mira/: design.md  requirements.md  tasks.md
benches/: memory_performance.rs  performance.rs
docs/: camera_manager.md  scaling_implementation.md  shape_generation.md  window_manager.md
examples/: camera_demo.rs  drag_demo.rs  error_handling_demo.rs  rotation_demo.rs  scaling_demo.rs  shape_demo.rs  window_demo.rs
scripts/: README.md  build_release.ps1  build_release.sh  generate_certificates.ps1  generate_certificates.sh
src/: error.rs  event.rs  lib.rs  logging.rs  main.rs  memory.rs  performance.rs  tray.rs
src/camera/: manager.rs  mod.rs  tests.rs
src/config/: manager.rs  mod.rs
src/render/: engine.rs  mod.rs  shader.wgsl  ui_integration_test.rs  ui_shader.wgsl  ui_tests.rs
src/shape/: mask.rs  mod.rs
src/ui/: context_menu.rs  menu_renderer.rs  menu_shader.wgsl  mod.rs
src/window/: manager.rs  mod.rs  scaling_tests.rs  tests.rs
tests/: integration_tests.rs  performance_integration_test.rs  property_tests.rs
